0.03
 - Update copyright years.

0.02 2023-01-01T13:38:13+01:00
 - Add test for constructor.
 - Update copyright years.

0.01 2022-08-03T01:31:34+02:00
 - First version.